rough layout for hour 2 content

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -49,6 +49,26 @@ export default Invert
 
 export default Invert
 
+# HOUR 2 - Todo App (with Material UI)
+
+1. `npx create-react-app rapid-react-todo` (then wait a bit, or you can clone our repo)
+2. open ./rapid-react-todo in your VS Code (or your editor/IDE)
+3. clean out app.js and app.css (clean slate)
+4. install material ui `npm install @material-ui/core`
+5. create list portion with state hook
+6. create add controls with ref hook
+7. add grid-based layout
+8. add remove controls?
+9. refactor hooks to custom hook?
+10. refactor components?
+11. where to go from here?
+  1. try syncing to backend (use mocks in dev)
+  2. CI/CD?
+
+---
+
+export default Invert
+
 ## Section Title
 
 ---
