--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -452,9 +452,9 @@ export default App;
 ---
 export default Invert
 
-# Layout
+# Responsive Layout
 
-- Let's add a better layout to the app
+- Let's add a responsive Layout
 - We'll use Material-UIs Grid component to make things look much better
 
 ---
@@ -499,20 +499,30 @@ function App() {
           <Typography variant="h3" gutterBottom>Todo List</Typography>
         </Grid>
       </Grid>
-      <TextField inputRef={textFieldRef} placeholder="new todo" />
-      <Button variant="contained" color="primary" onClick={handleAddClick}>Add</Button>
-      <List>
-        {todos.map((todo, index) => (
-          <ListItem key={index}>
-            <ListItemText primary={todo} />
-            <ListItemSecondaryAction>
-              <IconButton onClick={() => handleDeleteClick(index)}>
-                <DeleteIcon />
-              </IconButton>
-            </ListItemSecondaryAction>
-          </ListItem>
-        ))}
-      </List>
+      <Grid container justify="center" spacing={3}>
+        <Grid item xs={9} md={5}>
+          <TextField inputRef={textFieldRef} placeholder="new todo" fullWidth />
+        </Grid>
+        <Grid item xs={2} md={1}>
+          <Button variant="contained" color="primary" onClick={handleAddClick}>Add</Button>
+        </Grid>
+      </Grid>
+      <Grid container justify="center">
+        <Grid item xs={12} md={6}>
+          <List>
+            {todos.map((todo, index) => (
+              <ListItem key={index}>
+                <ListItemText primary={todo} />
+                <ListItemSecondaryAction>
+                  <IconButton onClick={() => handleDeleteClick(index)}>
+                    <DeleteIcon />
+                  </IconButton>
+                </ListItemSecondaryAction>
+              </ListItem>
+            ))}
+          </List>
+        </Grid>
+      </Grid>
     </>
   );
 }
@@ -520,6 +530,44 @@ function App() {
 export default App;
 ----
 6:7 > Import Grid and Typography
-33:37 > Add a header
-
+33:37 > Add a cenetered header
+33 > Use a container grid to center all content in a grid
+34 > Use an item grid for all grid content
+34 > Set sizes at different breakpoints using xs and md
+35 > Typography will create text elements in material ui style
+38:39, 41:42, 44:45 > We want the textfield and button side by side so we'll put them in the same container grid
+46:47, 60:61 > Wrap the List with a centered grid, xs={12} and md={6}
 ```
+---
+
+export default Invert
+
+## Desktop
+<img src="./hour-two/ResponsiveFull.png" />
+
+---
+
+export default Invert
+
+## Phone
+<img src="./hour-two/ResponsiveSmall.png" />
+
+---
+
+export default Invert
+
+# Take your app further
+
+- Ability to edit todos
+- Saving todos to a local storage
+  - save on add, remove, edit
+- Syncing todos to backend
+  - Trigger backend sync after any change to local storage
+  - Use mocks to develop without a real backend
+
+---
+export default Invert
+
+# Thank you!
+
+---
