--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -74,7 +74,7 @@ export default Invert
 
 - Generates a full react project with a single command
 - RAPID development
-  - Babel is configure for you
+  - Babel is configured for you
   - No need to configure webpack
   - You get a hot-reloading dev server
   - serious time saver
@@ -85,11 +85,10 @@ export default Invert
 - Execute the dev server with `npm start`
 
 ---
-The app will look like this
-
+# The app will look like this
 <img src="./hour-two/CRA-start.png" />
 ---
-The project structure will look like this
+# The project structure will look like this
 <img src="./hour-two/cra-project-view.png" />
 ---
 export default Invert
@@ -558,6 +557,8 @@ export default Invert
 
 # Take your app further
 
+- Refactoring
+  - Make TodoItem its own component
 - Ability to edit todos
 - Saving todos to a local storage
   - save on add, remove, edit
