--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -204,8 +204,9 @@ export default Invert;
   - Component libraries include components that don't exist in HTML
 
 - Check out Material UI (Website Here)
-- Install Material UI
+- Install Material UI Core Components and Icons
   - `npm install @material-ui/core`
+  - `npm install @material-ui/icons`
 
 ---
 
@@ -213,10 +214,11 @@ export default Invert;
 
 # Components We'll use...
 
-- List, ListItem, etc ([Docs](https://material-ui.com/components/lists/))
-- Button, IconButton (link)
-- TextField (link)
-- Grid (link)
+- List, ListItem, etc (<a href="https://material-ui.com/components/lists/" target="_blank">Docs</a>)
+- Button, IconButton (<a href="https://material-ui.com/components/buttons/" target="_blank">Docs</a>)
+- TextField (<a href="https://material-ui.com/components/text-fields/" target="_blank">Docs</a>)
+- DeleteIcon (<a href="https://material-ui.com/components/icons/" target="_blank">Docs</a>)
+- Grid (<a href="https://material-ui.com/components/grid/" target="_blank">Docs</a>)
 
 ---
 
