fixed a spelling mistake

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -200,7 +200,7 @@ export default Invert;
 # Component Libraries and Material UI
 
 - Benefits of using a component library
-  - OOTB HTML element look bad, Components are built to look great 
+  - OOTB HTML elements look bad, Components are built to look great 
   - Component libraries include components that don't exist in HTML
 
 - Check out Material UI (Website Here)
