Hour-two updates. Added screenshots

--- a/src/deck.mdx
+++ b/src/deck.mdx
@@ -133,22 +133,27 @@ ReactDOM.render(
 <img src="./hour-one/component-search.jpg" style={{width: '80%', height: 'auto'}} />
 
 ---
+
+# Let's build a todo list!
+
 ---
 
-export default Invert
+# create-react-app
 
-# create-react-app (brought to you by facebook)
-
+- Written by facebook for learning react
 - Generates a full react project with a single command
-- RAPID development
-  - Babel is configured for you
-  - No need to configure webpack
-  - You get a hot-reloading dev server
-  - serious time saver
+-   Serious time saver
+  - Lots of tooling is configured for you
+  - Hot-reloading dev server
 
-  `npx create-react-app app-name`
+---
+
+  # Generating a project
+
+  `npx create-react-app rapid-react-todo`
 
 - Open in VS Code
+- Open terminal (ctrl + `)
 - Execute the dev server with `npm start`
 
 ---
@@ -157,8 +162,9 @@ export default Invert
 ---
 # The project structure will look like this
 <img src="./hour-two/cra-project-view.png" />
+
+open app.js
 ---
-export default Invert
 
 ```javascript
 import React from 'react';
@@ -188,14 +194,11 @@ function App() {
 
 export default App;
 ----
-* > Open App.js
 * > Lets clean out the app so we can write our todo list code here
 2:3 > Remove lines 2-3
 ```
 
 ---
-
-export default Invert
 
 ```javascript
 import React from 'react';
@@ -228,8 +231,6 @@ export default App;
 ```
 ---
 
-export default Invert
-
 ```javascript
 import React from 'react';
 
@@ -251,40 +252,41 @@ export default App;
 ```
 ---
 
-export default Invert;
+# Component Libraries
 
-# Component Libraries and Material UI
+- Default HTML Elements look bad
+  <img src="./hour-two/ButtonCompare.png" width="400" />
+- Great looking components
+- Features HTML doesn't have
+- Components HTML doesn't have
 
-- Benefits of using a component library
-  - OOTB HTML elements look bad, Components are built to look great 
-  - Component libraries include components that don't exist in HTML
+---
 
-- Check out Material UI (Website Here)
+# Material UI
+
+- Check out [Material UI](https://material-ui.com/)
+- React component library based on [Material Design](https://material.io/design/)
 - Install Material UI Core Components and Icons
   - `npm install @material-ui/core`
   - `npm install @material-ui/icons`
 
 ---
 
-export default Invert;
+# Material Components for Todo List
 
-# Components We'll use...
-
-- List, ListItem, etc (<a href="https://material-ui.com/components/lists/" target="_blank">Docs</a>)
-- Button, IconButton (<a href="https://material-ui.com/components/buttons/" target="_blank">Docs</a>)
-- TextField (<a href="https://material-ui.com/components/text-fields/" target="_blank">Docs</a>)
-- DeleteIcon (<a href="https://material-ui.com/components/icons/" target="_blank">Docs</a>)
-- Grid (<a href="https://material-ui.com/components/grid/" target="_blank">Docs</a>)
+- List, ListItem, etc (<a href="https://material-ui.com/components/lists/" target="_blank">Examples</a> | <a href="https://material-ui.com/components/lists/#api" target="_blank">Docs</a>)
+- Button, IconButton (<a href="https://material-ui.com/components/buttons/" target="_blank">Examples</a> | <a href="https://material-ui.com/components/buttons/#api" target="_blank">Docs</a>)
+- TextField (<a href="https://material-ui.com/components/text-fields/" target="_blank">Examples</a> | <a href="https://material-ui.com/components/text-fields/#api" target="_blank">Docs</a>)
+- DeleteIcon (<a href="https://material-ui.com/components/icons/" target="_blank">Examples</a> | <a href="https://material-ui.com/components/icons/#api" target="_blank">Docs</a>)
+- Grid (<a href="https://material-ui.com/components/grid/" target="_blank">Examples</a> | <a href="https://material-ui.com/components/grid/#api" target="_blank">Docs</a>)
 
 ---
 
-export default Invert
+# Component API
 
-# Let's build the todo list!
+<img src="./hour-two/MaterialAPI.png" />
 
 ---
-
-export default Invert
 
 ```javascript
 import React from 'react';
@@ -308,8 +310,6 @@ export default App;
 ```
 
 ---
-
-export default Invert
 
 ```javascript
 import React from 'react';
@@ -339,8 +339,6 @@ export default App;
 ```
 ---
 
-export default Invert
-
 # About React State and Hooks
 
 - State allows your component to "remember" data
@@ -348,7 +346,6 @@ export default Invert
   - [More on React hooks](https://reactjs.org/docs/hooks-state.html)
 
 ---
-export default Invert
 
 ```javascript
 import React, { useState } from 'react';
@@ -385,8 +382,6 @@ export default App;
 
 ---
 
-export default Invert
-
 # Adding new todos
 
 - Without being able to add todos, the app is basically still static...
@@ -394,7 +389,6 @@ export default Invert
 - A React "Ref" is used to access the HTML element rendered by react, we use this to read the value a user enters into a text field
 
 ---
-export default Invert
 
 ```javascript
 import React, { useState, useRef } from 'react';
@@ -450,7 +444,6 @@ export default App;
 ```
 
 ---
-export default Invert
 
 # Removing todos
 
@@ -458,7 +451,6 @@ export default Invert
 - Being able to remove todos is useful for marking things completed
 
 ---
-export default Invert
 
 ```javascript
 import React, { useState, useRef } from 'react';
@@ -518,7 +510,6 @@ export default App;
 ```
 
 ---
-export default Invert
 
 # Responsive Layout
 
@@ -526,8 +517,6 @@ export default Invert
 - We'll use Material-UIs Grid component to make things look much better
 
 ---
-
-export default Invert
 
 ```javascript
 import React, { useState, useRef } from 'react';
@@ -607,22 +596,18 @@ export default App;
 46:47, 60:61 > Wrap the List with a centered grid, xs={12} and md={6}
 ```
 ---
-
 export default Invert
 
 ## Desktop
 <img src="./hour-two/ResponsiveFull.png" />
 
 ---
-
 export default Invert
 
 ## Phone
 <img src="./hour-two/ResponsiveSmall.png" />
 
 ---
-
-export default Invert
 
 # Take your app further
 
@@ -634,9 +619,10 @@ export default Invert
 - Syncing todos to backend
   - Trigger backend sync after any change to local storage
   - Use mocks to develop without a real backend
+- Write unit tests
+  - Start [here](https://reactjs.org/docs/testing.html)
 
 ---
-export default Invert
 
 # Thank you!
 
